# monitoring-service

./: .dockerignore  Dockerfile  Dockerfile_for_test  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 318a1cf207ab_init.py
src/: .env_example  .env_test  main.py  settings.py
src/dependencies/: database.py
src/models/: __init__.py  base.py  links.py
src/repositories/: repositories.py
src/routers/: __init__.py  links.py
src/schemas/: links.py
src/services/: links.py
src/tests/: conftest.py  test_routes.py
src/utils/: unitofwork.py
